@@ -7,6 +7,7 @@
 	- Remove NEWLINE.
 	- Extend varsreader.cc to allow VAR=\n and (for portage escapes)
 	  VAR[\t ]*=[\t ]*value http://bugs.gentoo.org/show_bug.cgi?id=417387
+	- Do not cache version strings to save memory.
 
 *eix-0.25.5
 	Artem Karimov <skybon at gmail.com>:
